--- a/content/css/styles.css
+++ b/content/css/styles.css
@@ -366,19 +366,26 @@ body {
   border-radius: 25px;
   border: 2px solid #20CAAE;
   color: #20CAAE;
-  width: 400px;
+  width: 80%;
   height: 40px;
+  margin: 1em auto;
+}
+
+@media (min-width: 1200px) {
+  .main__tilmelding-btn {
+    width: 20vw;
+  }
 }
 
 @media (min-width: 992px) {
   .main__tilmelding-btn {
-    width: 40vw;
+    width: 20vw;
   }
 }
 
 @media (min-width: 767px) {
   .main__tilmelding-btn {
-    width: 40vw;
+    width: 20vw;
   }
 }
 
@@ -397,6 +404,13 @@ body {
 .main__tilmelding-img {
   display: block;
   width: 100%;
+}
+
+@media (min-width: 1200px) {
+  .main__tilmelding-img {
+    width: 100%;
+    height: 500px;
+  }
 }
 
 .container-about, .container-contact, .mail {
@@ -431,7 +445,13 @@ body {
 }
 
 .container-about__text {
-  margin: 1.4em .2em;
+  margin: 1.4em 1em;
+  font-size: 15px;
+  line-height: 1.5em;
+}
+
+.container-about__text h2 {
+  margin-bottom: 1em;
 }
 
 @media (min-width: 992px) {
@@ -604,5 +624,18 @@ body {
 
 .footer__text p {
   color: #414141;
+}
+
+@media only screen and (max-width: 1300px) {
+  .header__nav {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 1000px) {
+  .header__strip {
+    -ms-grid-columns: 30% 1fr 30%;
+        grid-template-columns: 30% 1fr 30%;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
