--- a/content/css/styles.scss
+++ b/content/css/styles.scss
@@ -339,16 +339,17 @@ body {
         border-radius: 25px;
         border: 2px solid $highlight-color;
         color: $highlight-color;
-        width: 400px;
+        width: 80%;
         height: 40px;
-        @include breakpoint(large){
-            width: 40vw;
+        margin: 1em auto;
+        @include breakpoint(desktop){
+            width: 20vw;
         }
         @include breakpoint(tablet){
-            width: 40vw;
+            width: 20vw;
         }
         @include breakpoint(mobile){
-            width: 40vw;
+            width: 20vw;
         }
     }
     &__tilmelding-input{
@@ -364,10 +365,10 @@ body {
     }
     &__tilmelding-img{
         display: block;
-        @include breakpoint(large){
+        @include breakpoint(desktop){
             width: 100%;
             height: 500px;
-            margin-top: 5em;
+            // margin-top: 5em;
         }
         width: 100%;
     }
@@ -385,7 +386,6 @@ body {
 
 .container-about {
     grid-template-columns: 1fr;
-
     @include breakpoint(tablet) {
         grid-template-columns: 60% 40%;
     }
@@ -400,7 +400,12 @@ body {
     }
 
     &__text {
-        margin: 1.4em .2em;
+        margin: 1.4em 1em;
+        font-size: 15px;
+        line-height: 1.5em;
+        h2 {
+            margin-bottom: 1em;
+        }
 
         @include breakpoint(tablet) {
         margin: .4em .2em;
@@ -543,3 +548,15 @@ body {
 }
 
 // FOOTER END
+
+@media only screen and (max-width: 1300px) {
+    .header__nav {
+        width: 50%;
+    }
+}
+
+@media only screen and (max-width: 1000px){
+    .header__strip {
+        grid-template-columns: 30% 1fr 30%;
+    }
+}
